added tests via API
